feat: refactored routes and added permission test
