# src/main/openapi/openapi-bff.yaml
@@ -107,16 +107,9 @@ components:
         - 'shellRemoteComponents'
       properties:
         routes:
-          type: object
-          properties:
-            angularRoutes:
-              type: array
-              items:
-                $ref: '#/components/schemas/AngularRoute'
-            webComponentRoutes:
-              type: array
-              items:
-                $ref: '#/components/schemas/WebComponentRoute'
+          type: array
+          items:
+            $ref: '#/components/schemas/Route'
         theme:
           $ref: '#/components/schemas/Theme'
         workspace:
@@ -154,7 +147,7 @@ components:
       properties:
         name:
           type: string
-        baseUrl: #basis url des workspaces
+        baseUrl:
           type: string
 
     Theme:
@@ -194,9 +187,9 @@ components:
         - 'productName'
         - 'pathMatch'
       properties:
-        url: #??
+        url:
           type: string
-        basePath:          #GET FROM WORKSPACE  - microfrontend URL
+        basePath:
           type: string
         remoteEntryUrl:
           type: string
@@ -210,6 +203,8 @@ components:
           type: string
         pathMatch:
           $ref: '#/components/schemas/PathMatch'
+        remoteName:
+          type: string
 
     Technologies:
       type: string
@@ -218,21 +213,6 @@ components:
     PathMatch:
       type: string
       enum: ['full', 'prefix']
-
-    AngularRoute:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/Route'
-
-    WebComponentRoute:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/Route'
-      required:
-        - 'remoteName'
-      properties:
-        remoteName:
-          type: string
 
     RemoteComponent:
       type: object
